# wealthyfy

./: .gitignore  README.md  docker-compose-prod.yml  docker-compose.yml  env.example  run_backend.bat
backend/: .env.example  Dockerfile  auth.py  check_db.py  database.py  db_output.txt  main.py  migrate_liabilities.py  pyproject.toml  requirements.txt  seed_data.py
backend/models/: models.py
backend/routers/: budget.py  dashboard.py  dashboard_router.py  expenses.py  friends.py  income.py  investment.py  liability.py  projections.py  receivables.py  settings_router.py
backend/schemas/: schemas.py
backend/services/: budget_service.py  dashboard_service.py  expense_service.py  export_service.py  financial_engine.py  friend_service.py  import_service.py  income_service.py  investment_service.py  liability_service.py  projection_engine.py  receivable_service.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: axios.ts  dashboardApi.ts  friendsApi.ts  settingsApi.ts  setupAxios.ts
frontend/src/components/: ChartContainer.tsx  FriendBalances.tsx  MainLayout.tsx  ProtectedRoute.tsx
frontend/src/pages/: Budgets.tsx  DailyOverview.tsx  Dashboard.tsx  Expenses.tsx  Income.tsx  Investments.tsx  Liabilities.tsx  MonthlyDashboard.tsx  Planning.tsx  Receivables.tsx  Settings.tsx
